[project]
name = "bountybot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jbase16",email = "jphil16@icloud.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pygments (>=2.19.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "bountybot", from = "src" }
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
